# fullerene

./: CMakeLists.txt  LISEZMOI.txt  README.txt  TODO.txt
include/: CMakeLists.txt  Graph.hpp  Graph_01.hpp  Vertice.hpp  Vertice_01.hpp  functions.hpp  graphExceptions.hpp  graphGenerator.hpp  graphPrinter.hpp
lib/: CMakeLists.txt  graphV3.py
printer/: graphV3.py
src/: CMakeLists.txt  Graph.cpp  Graph_01.cpp  Vertice.cpp  Vertice_01.cpp  functions.cpp  graphExceptions.cpp  graphGenerator.cpp  graphPrinter.cpp  main.cpp  test.cpp
